Use darker green to fix a11y contrast issues

--- a/src/styles.css
+++ b/src/styles.css
@@ -26,7 +26,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-    color: #689800; 
+    color: #567d00; 
 }
 
 #contentWrapper {
